Further improvements and project section

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 		      <div class="span4">
 			      <img class="img-circle" src="img/desks.jpg"/>
 			      <h2>Who We Are</h2>
-			      <p>Ovida is the partnership of two freelance developers trained in a diverse range of Computer Science fields with <strong>experience</strong> developing software in a <strong>variety of industry sectors</strong> including the Aviation, Advertising, Banking and Forensic industries; as well as <strong>R&amp;D</strong> work in machine learning and computer vision.</p>
+			      <p>Ovida is the partnership of two freelance developers trained in a diverse range of Computer Science fields with <strong>experience</strong> developing software in a <strong>variety of industry sectors</strong>.</p>
 		      </div>
 		      <div class="span4">
 			      <img class="img-circle" src="img/code.jpg"/>
 			      <h2>What We Offer</h2>
-			      <p>We can <strong>build</strong>/<strong>maintain</strong>/<strong>extend</strong> your software, phone apps and web-application products and are able to cover the <strong>complete range of development stages</strong> from initial feasibility studies, design and prototyping, to fully-fledged customer-facing end products and post-launch maintenance.</p>
+			      <p>We can <strong>build</strong>/<strong>maintain</strong>/<strong>extend</strong> your software, mobile apps and web-application products and are able to cover the <strong>complete range of development stages</strong> from initial feasibility studies, design and prototyping, to fully-fledged customer-facing end products and post-launch maintenance.</p>
 		      </div>
 		      <div class="span4">
 	            <img class="img-circle" src="img/open.jpg"/>
@@ -72,36 +72,66 @@
 	   <!-- FEATURETTES -->
 	   <div class="featurette" id="about">
 	      <div class="page-header">
-	         <h1 class="featurette-heading">About Us <small>Who we are and what we do.</small></h1>
+	         <h1 class="featurette-heading">About Us <small>We build products.</small></h1>
 	      </div>
-	      <p>Ovida's roots start in 2009 when two Computer Science students at <a href="http://www.imperial.ac.uk" target="_blank">Imperial College London</a> discovered they shared a strong work ethic and enthusiasm for harnessing new technologies to build useful products. 
-         <p>As the years passed, the partnership became more and more successful, so much so that it was felt simply too good to abandon. In 2011 we officially began working under the name of <strong>Ovida</strong>, building software from our base in London; some of which <a href="http://www.thisislincolnshire.co.uk/Lincolnshire-Police-hi-tech-match-fingerprints/story-12969111-detail/story.html" target="_blank">made the local press</a>! We are also attendees of the <a href="www.rhok.org" target="_blank">Random Hack of Kindness</a> hackathons where we have built a prototype application helping care for Alzheimer patients. We have secured office space at the <strong>Google Campus</strong> in Silicon Roundabout London which we are due to move into later this year.</p>
-	      <p>We have developed software for a variety of companies in sectors including advertising, aviation, finance and urban development.
+         <div id="quickInfo" class="row">
+            <div class="span4">
+	            <p>Ovida's roots start in 2009 when two Computer Science students at <a href="http://www.imperial.ac.uk" target="_blank">Imperial College London</a> discovered they shared a strong work ethic and enthusiasm for harnessing new technologies to build useful products.</p>
+            </div>
+            <div class="span4">
+               <p>As the years passed, the partnership became more and more successful thanks to combined experience in Aviation, Advertising, Banking and Forensic industries; as well as <strong>R&D</strong> work in <strong>machine learning</strong> and <strong>computer vision</strong>.</p>
+            </div>
+            <div class="span4">
+	            <p>Since 2011 we have been building software from our base in London and this autumn, we will be moving into our new offices at <strong>Google Campus</strong>.</p>
+            </div>
+         </div>
 	      <h2><small>Technologies we work with include</small></h2>
 	<span class="label label-info">Java</span> <span class="label label-info">Python</span> <span class="label label-info">C++</span> <span class="label label-info">MySQL</span> <span class="label label-info">PHP</span> <span class="label label-info">HTML5+JS+CSS</span> <span class="label label-info">Android</span> <span class="label label-info">Blackberry</span> <span class="label label-info">Django</span> <span class="label label-info">Spring (Java EE)</span> <span class="label label-info">Ruby On Rails</span>
-	</div>	
+	</div>
+	<div class="featurette" id="about">
+	      <div class="page-header">
+	         <h1 class="featurette-heading">Projects <small>Some of what we worked on in the past.</small></h1>
+	      </div>
+         <div id="quickInfo" class="row">
+		      <div class="span4">
+			      <img class="project-img" src="img/logo_fish.jpg"/>
+			      <h3>FISH Mobile</h3>
+			      <p>Mobile applications suite that supports seamless evidence collection at crime scenes.</p>
+		      </div>
+		      <div class="span4">
+			      <img class="project-img" src="img/logo_bubble.png"/>
+			      <h3>Bubble</h3>
+			      <p>Web application that utilises machine learning and data from social network to provide better assessments of products, businesses and services</p>
+		      </div>
+		      <div class="span4">
+	            <img class="project-img" src="img/logo_amadeus.jpg"/>
+			      <h3>Airport Touch Kiosk</h3>
+			      <p>An easy to use touch-screen kiosks that can be found at airports and allows passengers to track their luggage.</p>
+		      </div>
+	      </div> 
+	</div>
 	<div class="featurette" id="testimonials">
 	<div class="page-header">
 	<h1 class="featurette-heading">Testimonials <small>Hear what our clients, colleagues and associates have to say.</small></h1>
 	</div>
       <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
-        <div class="item container">
+        <div class="item active container">
          	  <div class="row">
          	  <div class="span6">
          	  <div class="quote">
 	          <blockquote>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                  <<small>Edwin Ridwan, Independent Investment Advisor</small>
+                  <p>[The software] has a direct impact on detecting and solving crime and is of great benefit to the county and potentially nationally and internationally.</p>
+                  <small>Lincolnshire Echo, newspaper by Local World</small>
                </blockquote>
          	  </div>
          	  </div>
          	  <div class="span6 featurette-image hidden-phone">
-	         	    <img src="img/AKQA.jpg"/>
+	         	    <img src="img/logo_lincolnnews.jpg"/>
          	  </div>
          	  </div>
-        </div>                
-        <div class="item active container">
+        </div>               
+        <div class="item container">
          <div class="container">
          	  <div class="row">
          	  <div class="span6">
@@ -117,7 +147,36 @@
          	  </div>
           </div>
         </div>          
-     
+        <div class="item container">
+         	  <div class="row">
+         	  <div class="span6">
+         	  <div class="quote">
+	          <blockquote>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                  <small>Edwin Ridwan, Independent Investment Advisor</small>
+               </blockquote>
+         	  </div>
+         	  </div>
+         	  <div class="span6 featurette-image hidden-phone">
+	         	    <img src="img/AKQA.jpg"/>
+         	  </div>
+         	  </div>
+        </div>   
+        <div class="item container">
+         	  <div class="row">
+         	  <div class="span6">
+         	  <div class="quote">
+	          <blockquote>
+                  <p>[The software] has a direct impact on detecting and solving crime and is of great benefit to the county and potentially nationally and internationally.</p>
+                  <small>Lincolnshire Echo, newspaper by Local World</small>
+               </blockquote>
+         	  </div>
+         	  </div>
+         	  <div class="span6 featurette-image hidden-phone">
+	         	    <img src="img/logo_lincolnnews.jpg"/>
+         	  </div>
+         	  </div>
+        </div>   
       </div>
       <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
       <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
