Added Amadeus testimonial

--- a/index.html
+++ b/index.html
@@ -176,7 +176,22 @@
 	         	    <img src="img/logo_lincolnnews.jpg"/>
          	  </div>
          	  </div>
-        </div>   
+        </div> 
+        <div class="item container">
+         	  <div class="row">
+         	  <div class="span6">
+         	  <div class="quote">
+	          <blockquote>
+                  <p>Oliver is a very enjoyable team mate to work with [..]. He worked independently and always met his deadlines, he proposed original solutions to the various problems and challenges that arose during his project. All in all he is a fellow I would certainly like to work with again.</p>
+                  <small>Carlo Fedeli, Software Development Engineer at Amadeus</small>
+               </blockquote>
+         	  </div>
+         	  </div>
+         	  <div class="span6 featurette-image hidden-phone">
+	         	    <img src="img/amadeus.png"/>
+         	  </div>
+         	  </div>
+        </div>            
       </div>
       <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
       <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
