Added Cristinas Testimonial

--- a/index.html
+++ b/index.html
@@ -182,6 +182,23 @@
          	  <div class="span6">
          	  <div class="quote">
 	          <blockquote>
+                  <p>I had the opportunity to work with Oli and David on several projects both within and outside the University. They are very talented programmers, with strong technical skills and perhaps more importantly they are very pleasant to work
+with. They consistently came up with great new ideas and tackled all problems with enthusiasm and dedication. I would happily
+work again with them as I consider them to be a great asset to any team.</p>
+                  <small>Cristina Grigoru&#x0163;&#x0103;, Former teammate</small>
+               </blockquote>
+         	  </div>
+         	  </div>
+         	  <div class="span6 featurette-image hidden-phone">
+	         	    <img class="img-circle" src="img/cristina.jpg"/>
+         	  </div>
+         	  </div>
+        </div>         
+        <div class="item container">
+         	  <div class="row">
+         	  <div class="span6">
+         	  <div class="quote">
+	          <blockquote>
                   <p>Oliver is a very enjoyable team mate to work with [..]. He worked independently and always met his deadlines, he proposed original solutions to the various problems and challenges that arose during his project. All in all he is a fellow I would certainly like to work with again.</p>
                   <small>Carlo Fedeli, Software Development Engineer at Amadeus</small>
                </blockquote>
