Changed description of Kiosk

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		      <div class="span4">
 	            <img class="project-img" src="img/logo_amadeus.jpg"/>
 			      <h3>Airport Touch Kiosk</h3>
-			      <p>An easy to use touch-screen kiosks that can be found at airports and allows passengers to track their luggage.</p>
+			      <p>An easy to use touch-screen kiosk for baggage halls in airports that allows passengers to locate,track, and report missing baggage.</p>
 		      </div>
 	      </div> 
 	</div>
