added redirection to ovida.co.uk

--- a/index.html
+++ b/index.html
@@ -4,281 +4,14 @@
     <meta charset="utf-8">
     <title>Ovida</title>
     <link rel="shortcut icon" href="favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    
-        <!-- Le styles -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+
+    <script type="text/javascript">
+         window.location = "http://yournewlocation.com";
+    </script>
+
     
 </head>
 <body>
-	<div id="firstPage">
-	   <!-- NAVBAR -->
-	   <div class="navbar-wrapper">
-	   <!-- Put navbar in a container. The container is centered in its parent. -->
-	      <div class="container">
-	         <div class="navbar navbar-inverse">
-	            <div class="navbar-inner">
-                  <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  </button>
-	               <a class="brand" href="">Ovida <small>Bespoke Development</small></a>
-	               <div class="nav-collapse collapse pull-right">
-		               <ul class="nav">
-			               <li><a href="#about">About Us</a></li>
-			               <li><a href="#testimonials">Testimonials</a></li>
-			               <li><a href="#contact">Contact</a></li>
-		               </ul>
-	               </div>
-	            </div>
-	         </div>
-	      </div>
-      </div>
-	
-	   <!-- BIG IMAGE -->
-	   <div id="bigImage">
-		   <div class="item center-cropped hidden-phone" style="background-image: url('img/header_n.jpg');"></div>
-	   </div>
-	
-	   <!-- CIRCLES -->
-	   <div class="container">
-	      <!-- BELOW IMAGE INFORMATION -->
-	      <div id="quickInfo" class="row">
-		      <div class="span4">
-			      <img class="img-circle" src="img/desks.jpg"/>
-			      <h2>Who We Are</h2>
-			      <p>Ovida is the partnership of two freelance developers trained in a diverse range of Computer Science fields with <strong>experience</strong> developing software in a <strong>variety of industry sectors</strong>.</p>
-		      </div>
-		      <div class="span4">
-			      <img class="img-circle" src="img/code.jpg"/>
-			      <h2>What We Offer</h2>
-			      <p>We can <strong>build</strong>/<strong>maintain</strong>/<strong>extend</strong> your software, mobile apps and web-application products and are able to cover the <strong>complete range of development stages</strong> from initial feasibility studies, design and prototyping, to fully-fledged customer-facing end products and post-launch maintenance.</p>
-		      </div>
-		      <div class="span4">
-	            <img class="img-circle" src="img/open.jpg"/>
-			      <h2>Enquire Within</h2>
-			      <p>We are currently accepting projects so please <a href="#contact">get in touch</a> or hear more about <a href="#about">our story</a>, or read the <a href="#testimonials">nice things</a> people have said about us. </p>
-		      </div>
-	      </div>
-	   </div> <!-- END OF CIRCLES -->
-   </div> <!-- END OF FIRST PAGE -->
-		
-	<div class="container">
-	   <!-- FEATURETTES -->
-	   <div class="featurette" id="about">
-	      <div class="page-header">
-	         <h1 class="featurette-heading">About Us <small>We build products.</small></h1>
-	      </div>
-         <div id="quickInfo" class="row">
-            <div class="span4">
-	            <p>Ovida's roots start in 2009 when two Computer Science students at <a href="http://www.imperial.ac.uk" target="_blank">Imperial College London</a> discovered they shared a strong work ethic and enthusiasm for harnessing new technologies to build useful products.</p>
-            </div>
-            <div class="span4">
-               <p>As the years passed, the partnership became more and more successful thanks to combined experience in Aviation, Advertising, Banking and Forensic industries; as well as <strong>R&D</strong> work in <strong>machine learning</strong> and <strong>computer vision</strong>.</p>
-            </div>
-            <div class="span4">
-	            <p>Since 2011 we have been building software from our base in London and this autumn, we will be moving into our new offices at <strong>Google Campus</strong>.</p>
-            </div>
-         </div>
-	      <h2><small>Technologies we work with include</small></h2>
-	<span class="label label-info">Java</span> <span class="label label-info">Python</span> <span class="label label-info">C++</span> <span class="label label-info">MySQL</span> <span class="label label-info">PHP</span> <span class="label label-info">HTML5+JS+CSS</span> <span class="label label-info">Android</span> <span class="label label-info">Blackberry</span> <span class="label label-info">Django</span> <span class="label label-info">Spring (Java EE)</span> <span class="label label-info">Ruby On Rails</span>
-	</div>
-	<div class="featurette" id="about">
-	      <div class="page-header">
-	         <h1 class="featurette-heading">Projects <small>Some of what we worked on in the past.</small></h1>
-	      </div>
-         <div id="quickInfo" class="row">
-		      <div class="span4">
-			      <img class="project-img" src="img/logo_fish.jpg"/>
-			      <h3>FISH Mobile</h3>
-			      <p>Mobile applications suite that supports seamless evidence collection at crime scenes.</p>
-		      </div>
-		      <div class="span4">
-			      <img class="project-img" src="img/logo_bubble.png"/>
-			      <h3>Bubble</h3>
-			      <p>Web application that utilises machine learning and data from social network to provide better assessments of products, businesses and services</p>
-		      </div>
-		      <div class="span4">
-	            <img class="project-img" src="img/logo_amadeus.jpg"/>
-			      <h3>Airport Touch Kiosk</h3>
-			      <p>An easy to use touch-screen kiosks that can be found at airports and allows passengers to track their luggage.</p>
-		      </div>
-	      </div> 
-	</div>
-	<div class="featurette" id="testimonials">
-	<div class="page-header">
-	<h1 class="featurette-heading">Testimonials <small>Hear what our clients, colleagues and associates have to say.</small></h1>
-	</div>
-      <div id="myCarousel" class="carousel slide">
-      <div class="carousel-inner">
-        <div class="item active container">
-         	  <div class="row">
-         	  <div class="span6">
-         	  <div class="quote">
-	          <blockquote>
-                  <p>[The software] has a direct impact on detecting and solving crime and is of great benefit to the county and potentially nationally and internationally.</p>
-                  <small>Lincolnshire Echo, newspaper by Local World</small>
-               </blockquote>
-         	  </div>
-         	  </div>
-         	  <div class="span6 featurette-image hidden-phone">
-	         	    <img src="img/logo_lincolnnews.jpg"/>
-         	  </div>
-         	  </div>
-        </div>               
-        <div class="item container">
-         <div class="container">
-         	  <div class="row">
-         	  <div class="span6">
-         	  <div class="quote">
-               <blockquote>
-                  <p>Oli is a pleasure to work with. He grasped complex advanced topics quickly and would research areas by himself and come up with good solutions. He is also a thoroughly pleasant team member who everyone enjoyed working alongside. I couldn't recommend Oli strongly enough.</p> <small>Jon Barber, Technical Architect, AKQA</small>
-               </blockquote>
-         	  </div>
-         	  </div>
-         	  <div class="span6 featurette-image hidden-phone">
-	         	    <img src="img/akqa.jpg"/>
-         	  </div>
-         	  </div>
-          </div>
-        </div>          
-        <div class="item container">
-         	  <div class="row">
-         	  <div class="span6">
-         	  <div class="quote">
-	          <blockquote>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                  <small>Edwin Ridwan, Independent Investment Advisor</small>
-               </blockquote>
-         	  </div>
-         	  </div>
-         	  <div class="span6 featurette-image hidden-phone">
-	         	    <img src="img/AKQA.jpg"/>
-         	  </div>
-         	  </div>
-        </div>   
-        <div class="item container">
-         	  <div class="row">
-         	  <div class="span6">
-         	  <div class="quote">
-	          <blockquote>
-                  <p>[The software] has a direct impact on detecting and solving crime and is of great benefit to the county and potentially nationally and internationally.</p>
-                  <small>Lincolnshire Echo, newspaper by Local World</small>
-               </blockquote>
-         	  </div>
-         	  </div>
-         	  <div class="span6 featurette-image hidden-phone">
-	         	    <img src="img/logo_lincolnnews.jpg"/>
-         	  </div>
-         	  </div>
-        </div>   
-      </div>
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
-    </div>  
-	</div>       
-	<div class="featurette" id="contact">
-	<div class="page-header">
-	<h1 class="featurette-heading">Get in touch <small>We look forward to hearing from you.</small></h1>
-	</div>
-	<div class="row">
-	<div class="span4">
-	<h3>Contact Oli</h3>
-	<img class="img-circle" src="img/oli.jpg"/>
-	<table>
-		<tr>
-			<td><i class="icon-envelope"></i></td>
-			<td>oli@ovida.co.uk</td>
-		</tr>
-		<tr>
-			<td><i class="icon-signal"/></td>
-			<td>+44 785 460 1573</td>
-		</tr>
-		<tr>
-			<td><i class="icon-briefcase"></i></td>
-			<td><a href="http://uk.linkedin.com/pub/oliver-wilkie/40/679/42/">LinkedIn</a></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td><a href="https://twitter.com/oliwilks">@oliwilks</a></td>
-		</tr>
-	</table>
-	</div>
-	<div class="span4">
-	<h3>Contact David</h3>
-	<img class="img-circle" src="img/david.jpg"/>
-		<table>
-		<tr>
-			<td><i class="icon-envelope"></i></td>
-			<td>david@ovida.co.uk</td>
-		</tr>
-		<tr>
-			<td><i class="icon-signal"/></td>
-			<td>+44 750 686 4985</td>
-		</tr>
 
-		<tr>
-			<td><i class="icon-briefcase"></i></td>
-			<td><a href="http://uk.linkedin.com/in/haberdavid/en">LinkedIn</a></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td><a href="https://twitter.com/oliwilks">@davhab</a></td>
-		</tr>
-	</table>
-	</div>
-	<div class="span4">
-	   <h3>Drop Us A Line</h3>
-			<form>
-					<input type="email" placeholder="Email.." style="width:75%"/>
-					<textarea rows="3" placeholder="Message" style="width:75%"  ></textarea>
-					<br/>
-					<button type="submit" class="btn">Send</button>
-			</form>
-			<div class="alert alert-success">
-					<b>Thanks!</b> We will be in touch very soon!
-			</div>
-	</div>
-	</div>
-	
-	<footer>
-		<p class="pull-right"><a href="">Back to top</a></p>
-	</footer>
-	
-	</div><!-- END INFORMATION -->
-	
-	
-	
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/holder.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function() {
-         $('#myCarousel').carousel({
-            interval: 5000
-         })
-      });
-    </script>
-    <script type="text/javascript">
-    $('a[href^="#"]').not('.carousel-control').bind('click.smoothscroll',function (e) {
-	    e.preventDefault();
-	    var target = this.hash;
-	        $target = $(target);
-	    $('html, body').stop().animate({
-	        'scrollTop': $target.offset().top
-	    }, 500, 'swing', function () {
-	        window.location.hash = target;
-	    });
-    });
-</script>
 </body>
 </html>
