Added missing location

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
 
     <script type="text/javascript">
-         window.location = "http://yournewlocation.com";
+         window.location = "http://www.ovida.co.uk";
     </script>
 
     
