--- a/signature.html
+++ b/signature.html
@@ -1,15 +1,17 @@
-<div style="border-top:1px #aebla6 dotted; border-bottom:1px #aebla6 dotted;">
-<table style="font-family: 'Lucida Sans', Lucida Grande, Verdana, Arial, Sans-Serif; line-height:16px; color: #555555; font-size: 11px;"  cellpadding="0">
-<tr>
-<td rowspan="3" style="font-weight:800; font-size:350%; letter-spacing: -5px; padding-right:10px; font-family: Arial, Sans-Serif; color:#222222"><span style="">{</span>o<span style="">}</span>
-</td>
-	<td><strong style="text-transform:uppercase; font-size:10px; color:#333333;">MY NAME</strong>: Developer at <a href="http://www.ovida.co.uk" style="color:rgb(0,136,204) !important; text-decoration:none;">Ovida</a></td>
-</tr>
-<tr>
-	<td>phone: <a href="tel:00447854601573" style="color:rgb(0,136,204) !important; text-decoration:none;">012345678</a></td>
-</tr>
-<tr>
-	<td>web: <a href="http://www.ovida.co.uk" style="color:rgb(0,136,204) !important; text-decoration:none;">www.ovida.co.uk</a></td>
-</tr>
+<div style="border-top:1px #aeb1a6 dotted; border-bottom:1px #aeb1a6 dotted; padding: 7 0 7 0;">
+<table cellpadding="0" style="font-family: 'Lucida Sans', Lucida Grande, Verdana, Arial, Sans-Serif; line-height:16px; color: #555555; font-size: 11px;">
+    <tr>
+        <td rowspan="3" style="font-weight:800; font-size:350%; letter-spacing: -5px; padding-right:10px; font-family: Arial, Sans-Serif; color:#222222"><span style="font-size:120%">{</span>o<span style="font-size:120%">}</span></td>
+
+        <td><strong style="text-transform:uppercase; font-size:10px; color:#333333;">Oliver Wilkie</strong>: Developer at <a href="http://www.ovida.co.uk" style="color:rgb(0,136,204) !important; text-decoration:none;">Ovida</a></td>
+    </tr>
+
+    <tr>
+        <td>phone: <a href="tel:00447854601573" style="color:rgb(0,136,204) !important; text-decoration:none;">+44 7854601573</a></td>
+    </tr>
+
+    <tr>
+        <td>web: <a href="http://www.ovida.co.uk" style="color:rgb(0,136,204) !important; text-decoration:none;">www.ovida.co.uk</a></td>
+    </tr>
 </table>
 </div>
